--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="js/d3.v3.js"></script>
 	<script src="js/bootstrap.js"></script>
 	<script src="js/script.js"></script>
 </head>
@@ -113,7 +114,7 @@
 
 </div>
 <div id="line_chart">
-	<iframe frameborder="0" src="https://www.google.com/fusiontables/embedviz?containerId=googft-gviz-canvas&amp;viz=GVIZ&amp;t=LINE_AGGREGATE&amp;isXyPlot=true&amp;bsize=0&amp;q=select+col3%2C+col7+from+1BILYy9TOfCajakAc0_mVuM4KiN8EdroQxzahA-g&amp;qrs=+where+col3+%3E%3D+&amp;qre=+and+col3+%3C%3D+&amp;qe=+order+by+col3+asc&amp;uiversion=2&amp;rstart=0.45&amp;rend=50.004351032448376&amp;gco_forceIFrame=true&amp;gco_hasLabelsColumn=true&amp;width=460&amp;height=400" style="height: 400px; width:100%;"></iframe>
+	<svg id="chart"></svg>
 </div>
 
 <div id="map">
