Use d3js to display chart

--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
 
 </div>
 <div id="line_chart">
+	<iframe id="ichart" frameborder="0" src="https://www.google.com/fusiontables/embedviz?containerId=googft-gviz-canvas&amp;viz=GVIZ&amp;t=LINE_AGGREGATE&amp;isXyPlot=true&amp;bsize=0&amp;q=select+col3%2C+col7+from+1BILYy9TOfCajakAc0_mVuM4KiN8EdroQxzahA-g&amp;qrs=+where+col3+%3E%3D+&amp;qre=+and+col3+%3C%3D+&amp;qe=+order+by+col3+asc&amp;uiversion=2&amp;rstart=0.45&amp;rend=50.004351032448376&amp;gco_forceIFrame=true&amp;gco_hasLabelsColumn=true&amp;width=460&amp;height=400" style="height: 400px; width:100%;"></iframe>
 	<svg id="chart"></svg>
 </div>
 
 <div id="map">
 	<iframe id='ifmap' src="https://www.google.com/fusiontables/embedviz?q=select+col2+from+1BILYy9TOfCajakAc0_mVuM4KiN8EdroQxzahA-g&viz=MAP&h=false&lat=23.66519554836995&lng=121.2888611368409&t=1&z=7&l=col2&y=2&tmplt=2&hml=ONE_COL_LAT_LNG" frameborder="0" style="height: 400px; width:100%"></iframe>
 </div>
+	<div id="tiptool" style="display:none;"></div>
 
 </div>
 </body>
